# singleproxy

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.json
.cache/clangd/index/: cJSON.c.7C3ED1C03BADD4C3.idx  cJSON.h.25F2F2B3E89163C2.idx  cJSON_Utils.c.B378D712709C5AEB.idx  cJSON_Utils.h.B8B074CDA33DFFDA.idx  configuration.c.72ACC6CEAB94BE39.idx  configuration.h.284EBE3274418F17.idx  dns-parse.c.351AEF7D582BFA41.idx  dns-parse.h.60B542C577C0AD3D.idx  dns-protocol.h.95744C1B7EC20901.idx  dns.c.B7659B629B51F8E3.idx  dns_server.c.7048A701849E6873.idx  dns_server.h.6E9CF134A18F4FAC.idx  dump.c.7E6A7748B74D1FC9.idx  file_tools.h.89EF7736CFB54F53.idx  main.c.8F1DA24E31747D46.idx  network_tools.h.17DAB24E4913F8A5.idx  status.h.B9017B8356AFF39B.idx  string_tools.h.71ED22C864227B76.idx
include/configuration/: configuration.h
include/dns/: dns-parse.h  dns-protocol.h
include/server/: dns_server.h
include/utils/: file_tools.h  network_tools.h  status.h  string_tools.h
src/: main.c
src/configuration/: configuration.c
src/dns/: dns-parse.c
src/server/: dns_server.c
test/: dump.c
